added validate json schema to post auth/register

--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
     "@playwright/test": "^1.43.1",
     "@types/node": "^20.12.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "joi": "^17.12.3"
+  }
 }
